<?xml version="1.0"?>
<package format="3">
    <name>unitree_controller</name>
    <version>0.0.0</version>
    <description>The unitree_controller package</description>
    
    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license> <!-- Replace TODO with the actual license -->

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>joint_state_controller</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rclcpp</build_depend> <!-- ROS 2 equivalent to roscpp -->
    
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>joint_state_controller</build_export_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>rclcpp</build_export_depend>
    
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    
    <depend>unitree_legged_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <!-- Example: <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/> -->
    </export>
</package>
