<?xml version="1.0"?>
<package format="3">
  <name>unitree_legged_control</name>
  <version>0.0.0</version>
  <description>The unitree_legged_control package</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>
  <!-- 
  <build_type>ament_cmake</build_type>
  
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend> -->
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>unitree_legged_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/lib/unitree_controller_plugins.xml"/>
  </export>
</package>
